Stylesheets/headerANDfooter.css
/*------------------COPYRIGHT------------------*
* ALL RIGHTS RESERVED TO VLAD BALANESCU, 2017  *
* Personal Website                             *
* NOTICE:  All  information  contained  herein *
*          is and remains  the   property   of *
*          Vlad Balanescu.  The   intellectual *
*          and technical  concepts   contained *
*          herein  are proprietary   to   Vlad *
*          Balanescu.   Dissemination  of this *
*          information   or   reproduction  of *
*          this material is strictly forbidden *
*          unless prior written  permission is *
*          obtained    from     Vlad Balanescu.*
----------------------------------------------*/


/*--minimal reset--*/

* {
  margin: 0px;
  padding: 0px;
}

html {
  height: 100%;
}

/*----------general tags-------------------------*/

body {
  background-image: url("../Multimedia/Home.jpg");
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  background-size: 130% 200%, auto;
  -o-background-size: 130% 200%, auto;
  -moz-background-size: 130% 200%, auto;
  -webkit-background-size: 130% 200%, auto;
  min-height: 100%;
  position: relative;
}


/*----------general tags-------------------------*/


/*----------Preloader-------------------------*/

#preloader {
  position: fixed;
  z-index: 1200;
  width: 100%;
  height: 100%;
  background-color: black;
}

#preloader img {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

#preloaderText {
  color: #66ffff;
  font-size: 1.5vw;
  position: absolute;
  top: 65%;
  left: 47%;
}


/*----------Preloader-------------------------*/

/*----------Header----------------------------*/

#header {
  width: 100%;
  height: 3vw;
  background-color: #001a4d;
  position: fixed;
  z-index: 1000;
}

#logoImage, #logoImageOnHome {
  margin: 0.3vw 0vw 0vw 1vw;
  width: 8vw;
  height: 2.3vw;
  -webkit-transition: 0.8s;
  -moz-transition: 0.8s;
  -o-transition: 0.8s;
  -ms-transition: 0.8s;
  transition: 0.8s;
}

#logoImage:hover {
  margin-left: 1.5vw;
}

.navcontainer {
  float: right;
  margin-top: 0.8vw;
}

.navcontainer li, #submenu li {
  display: inline;
  margin: 0.3vw;
}

.navcontainer li a, #submenu li a {
  padding: 0.5vw 0.7vw;
  border-radius: 3px;
  color: #ffffff;
  text-decoration: none;
  text-align: center;
  font-size: 0.8vw;
  cursor: pointer;
  font-family: "Arial Black", "Serif";
  -webkit-transition: 0.8s;
  -moz-transition: 0.8s;
  -o-transition: 0.8s;
  -ms-transition: 0.8s;
  transition: 0.8s;
}

.navcontainer li a.nocurrent:hover {
  color: #66ffff;
}

.navcontainer li a.current {
  color: #66ffff;
  font-size: 1vw;
}

#submenu {
  border: 1px solid #000000;
  box-shadow: 3px 3px 0 #000000;
  background-color: #001a4d;
  z-index: 100;
  position: fixed;
  right: 0;
  padding: 5px 10px;
  margin-top: -1vw;
}

#submenu li a {
  padding: 0;
  font-size: 0.7vw;
}

#submenu li .listLink:hover, #submenu .current {
  color: #66ffff;
}


/*----------Header----------------------------*/


/*----------Slide show----------------------------*/

#slide-container {
  width: 100%;
  overflow: hidden;
  box-shadow: 0px 2px #0F2157;
}


/*----------Slide show----------------------------*/


/*--Footer-------------------------------------*/

#footer {
  position: absolute;
  bottom: -10%;
  width: 100%;
  height: 45px;
  min-height: 45px;
  background-color: #001a4d;
  padding-top: 5px;
}

#footerText {
  text-align: center;
  color: white;
  text-decoration: none;
  font-family: "Arial", "Serif";
  font-size: 0.75vw;
  font-style: italic;
}

#footerText2 {
  text-align: center;
  color: white;
  text-decoration: none;
  font-family: "Arial", "Serif";
  font-size: 0.6vw;
  margin-bottom: 5px;
}

#up {
  float: left;
  margin-left: 1vw;
  color: white;
  font-size: 35px;
  -webkit-transition: 1.5s;
  -moz-transition: 1.5s;
  -o-transition: 1.5s;
  -ms-transition: 1.5s;
  transition: 1.5s;
}

#up:hover {
  cursor: pointer;
  color: #66ffff;
}

.accessibility, .accessibility ul {
  float: right;
  margin: 0.2vw 0.5vw;
  text-align: center;
  font-weight: bold;
  font-size: 1.5vmin;
}

.accessibility li {
  display: inline;
}

.accessibility li a {
  padding: 3px 10px;
  color: white;
  text-decoration: none;
  -webkit-transition: 0.7s;
  -moz-transition: 0.7s;
  -o-transition: 0.7s;
  -ms-transition: 0.7s;
  transition: 0.7s;
}

.accessibility li a:hover {
  color: #66ffff;
}

.accessibility .acsButton {
  color: #66ffff;
  font-size: 1.8vmin;
}


/*--Footer---------------------------------------*/


/*----------Mobile version----------------------------*/

@media only screen and (max-device-width: 500px) {
  #footer {
    position: fixed;
  }
}


/*----------Mobile version----------------------------*/

